--- a/front-end/contactanos/resources/css/style.css
+++ b/front-end/contactanos/resources/css/style.css
@@ -24,3 +24,18 @@ body {
     width: 100%;
     height: 65%;
 }
+
+footer {
+    width: 100%;
+    background-color: rgb(6, 29, 97);
+    color: white;
+}
+
+footer a {
+    color: white;
+}
+
+footer a:hover {
+    color: white;
+    text-decoration: none;
+}
