--- a/front-end/resources/assets/css/style.css
+++ b/front-end/resources/assets/css/style.css
@@ -1,3 +1,24 @@
+.navbar {
+    color: white;
+}
+
+.navbar i {
+    color: white;
+    font-size: 3.0vh;
+}
+
+.navbar .carro {
+    padding-top: 1.7%;
+}
+
+.navbar input {
+    width: 80%!important;
+}
+
+.navbar .nav-item {
+    padding-top: 1.1%;
+}
+
 .carrusel .carousel-caption {
     background-color: rgba(32, 33, 36, 0.65);
 }
