--- a/front-end/productos/resources/css/style.css
+++ b/front-end/productos/resources/css/style.css
@@ -1,3 +1,24 @@
+.navbar {
+    color: white;
+}
+
+.navbar i {
+    color: white;
+    font-size: 3.0vh;
+}
+
+.navbar .carro {
+    padding-top: 1.7%;
+}
+
+.navbar input {
+    width: 80%!important;
+}
+
+.navbar .nav-item {
+    padding-top: 1.1%;
+}
+
 .jumbotron {
     background-color: #f1ca4a !important;
 }
