--- a/front-end/login/resources/css/style.css
+++ b/front-end/login/resources/css/style.css
@@ -1,3 +1,24 @@
+.navbar {
+    color: white;
+}
+
+.navbar i {
+    color: white;
+    font-size: 3.0vh;
+}
+
+.navbar .carro {
+    padding-top: 1.7%;
+}
+
+.navbar input {
+    width: 80%!important;
+}
+
+.navbar .nav-item {
+    padding-top: 1.1%;
+}
+
 body {
     background-image: url(http://drive.google.com/uc?export=view&id=1osds9-uPWTRt4ePtuMMvQB_Q14dKnBmY);
     background-size: 100%;
