[TlahuicoleSystem] cambios con login del admin

--- a/front-end/administrador/resources/css/style.css
+++ b/front-end/administrador/resources/css/style.css
@@ -44,6 +44,11 @@ footer {
     color: white;
 }
 
+.formulario{
+    margin-left: 28%;
+    margin-right: 28%;
+}
+
 
 /*plantilla de actualizar y modificar producto*/
 
